Workaround for binding to Observable

--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
@@ -31,7 +31,7 @@
       </Interaction.Behaviors>
 
     </c:TileControl>
-    <Popup IsOpen="{Binding IsCopyRunning, Mode=OneWay}" PlacementMode="Pointer">
+    <Popup IsOpen="{Binding IsCopyRunning^, Mode=OneWay}" PlacementMode="Pointer">
       <Border Background="{DynamicResource TileRegionColor}" Padding="8" BorderThickness="1" BorderBrush="{DynamicResource TileBorderColor}">
         <TextBlock>Copied!</TextBlock>
       </Border>
