--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
@@ -5,36 +5,28 @@
              xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls"
              xmlns:converters="clr-namespace:WalletWasabi.Fluent.Converters"
              xmlns:tiles="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.Tiles"
+             xmlns:behaviors="clr-namespace:WalletWasabi.Fluent.Behaviors"
              mc:Ignorable="d" d:DesignWidth="320" d:DesignHeight="140"
              x:CompileBindings="True"
              x:DataType="tiles:WalletBalanceTileViewModel"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.WalletBalanceTileView">
 
-  <Panel>
-    <c:TileControl Title="BALANCE" IsBottomContentVisible="{Binding HasBalance^}" SeparatorMargin="0 0 0 6">
-      <Viewbox Margin="0 3" VerticalAlignment="Center" MaxHeight="40">
-        <c:PrivacyContentControl Classes="h2 monoSpaced" HorizontalContentAlignment="Center"
-                                 Content="{Binding BalanceBtc^}" />
-      </Viewbox>
-      <c:TileControl.BottomContent>
-        <c:PrivacyContentControl Classes="bold monoSpaced" Margin="4" VerticalAlignment="Center"
-                                 HorizontalAlignment="Center" Opacity="0.8"
-                                 Content="{Binding BalanceFiat^, Converter={x:Static converters:MoneyConverters.ToUsdAproxBetweenParens}}">
-        </c:PrivacyContentControl>
+  <c:TileControl Title="BALANCE" IsBottomContentVisible="{Binding HasBalance^}" SeparatorMargin="0 0 0 6">
+    <Viewbox Margin="0 3" VerticalAlignment="Center" MaxHeight="40">
+      <c:PrivacyContentControl Classes="h2 monoSpaced" HorizontalContentAlignment="Center"
+                               Content="{Binding BalanceBtc^, Converter={x:Static converters:MoneyConverters.ToBtc}}" />
+    </Viewbox>
+    <c:TileControl.BottomContent>
+      <c:PrivacyContentControl Classes="bold monoSpaced" Margin="4" VerticalAlignment="Center"
+                               HorizontalAlignment="Center" Opacity="0.8"
+                               Content="{Binding BalanceFiat^, Converter={x:Static converters:MoneyConverters.ToUsdAproxBetweenParens}}">
+      </c:PrivacyContentControl>
 
-      </c:TileControl.BottomContent>
+    </c:TileControl.BottomContent>
 
-      <Interaction.Behaviors>
-        <EventTriggerBehavior EventName="PointerPressed">
-          <InvokeCommandAction PassEventArgsToCommand="True" Command="{Binding CopyBalanceCommand}" />
-        </EventTriggerBehavior>
-      </Interaction.Behaviors>
+    <Interaction.Behaviors>
+      <behaviors:ClipboardCopyBehavior Content="{Binding BalanceBtc^}" />
+    </Interaction.Behaviors>
 
-    </c:TileControl>
-    <Popup IsOpen="{Binding IsCopyRunning^, Mode=OneWay}" PlacementMode="Pointer">
-      <Border Background="{DynamicResource TileRegionColor}" Padding="8" BorderThickness="1" BorderBrush="{DynamicResource TileBorderColor}">
-        <TextBlock>Copied!</TextBlock>
-      </Border>
-    </Popup>
-  </Panel>
+  </c:TileControl>
 </UserControl>
