--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
@@ -14,17 +14,17 @@
   <c:TileControl Title="BALANCE" IsBottomContentVisible="{Binding HasBalance^}" SeparatorMargin="0 0 0 6">
     <Viewbox Margin="0 3" VerticalAlignment="Center" MaxHeight="40">
       <c:PrivacyContentControl Classes="h2 monoSpaced" HorizontalContentAlignment="Center"
-                               Content="{Binding BalanceBtc^, Converter={x:Static converters:MoneyConverters.ToBtc}}" />
+                               Content="{Binding BalanceBtc^, Converter={x:Static converters:MoneyConverters.ToBtc}}">
+        <Interaction.Behaviors>
+          <behaviors:ClipboardCopyBehavior Content="{Binding BalanceBtc^}" />
+        </Interaction.Behaviors>
+      </c:PrivacyContentControl>
     </Viewbox>
     <c:TileControl.BottomContent>
       <c:PrivacyContentControl Classes="bold monoSpaced" Margin="4" VerticalAlignment="Center"
                                HorizontalAlignment="Center" Opacity="0.8"
                                Content="{Binding BalanceFiat^, Converter={x:Static converters:MoneyConverters.ToUsdAproxBetweenParens}}" />
     </c:TileControl.BottomContent>
-
-    <Interaction.Behaviors>
-      <behaviors:ClipboardCopyBehavior Content="{Binding BalanceBtc^}" />
-    </Interaction.Behaviors>
 
   </c:TileControl>
 </UserControl>
