--- a/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
@@ -24,8 +24,8 @@
         <RowDefinition Height="20" />
       </Grid.RowDefinitions>
 
-      <Panel Grid.Row="2">
-        <ItemsControl Items="{Binding MnemonicWords}" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="ItemsControl">
+      <Panel Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <ItemsControl Items="{Binding MnemonicWords}">
           <ItemsControl.Styles>
             <Style Selector="TextBlock">
               <Setter Property="FontSize" Value="{DynamicResource FontSizeH6}" />
@@ -47,10 +47,7 @@
           </ItemsControl.ItemTemplate>
         </ItemsControl>
 
-        <Grid ColumnDefinitions="*,1,*,1,*"
-              HorizontalAlignment="Center" VerticalAlignment="Center"
-              Width="{Binding #ItemsControl.Bounds.Width}"
-              Height="{Binding #ItemsControl.Bounds.Height}">
+        <Grid ColumnDefinitions="*,1,*,1,*">
           <Separator Classes="vertical" Grid.Column="1" Margin="0 0 0 20" />
           <Separator Classes="vertical" Grid.Column="3" Margin="0 0 0 20" />
         </Grid>
