--- a/WalletWasabi.Fluent/Views/AddWallet/Create/ConfirmRecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/Create/ConfirmRecoveryWordsView.axaml
@@ -62,10 +62,6 @@
       <Panel Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
         <ItemsControl Items="{Binding ConfirmationWords}">
           <ItemsControl.Styles>
-            <Style Selector="TextBlock">
-              <Setter Property="FontSize" Value="{DynamicResource FontSizeH6}" />
-              <Setter Property="Height" Value="42" />
-            </Style>
             <Style Selector="TextBlock.error">
               <Setter Property="Foreground" Value="{DynamicResource SystemErrorTextColor}" />
             </Style>
@@ -78,9 +74,9 @@
           <ItemsControl.ItemTemplate>
             <DataTemplate>
               <StackPanel Orientation="Horizontal" Margin="50 0 50 0" Width="80">
-                <TextBlock Text="{Binding Index, Mode=OneWay, StringFormat={}{0}.}" Opacity="0.5" />
+                <TextBlock Text="{Binding Index, Mode=OneWay, StringFormat={}{0}.}" Opacity="0.5" FontSize="{DynamicResource FontSizeH6}" Height="42" />
                 <TextBlock Text="{Binding SelectedWord}" FontWeight="SemiBold" Margin="5 0 0 0"
-                           Classes.error="{Binding !IsConfirmed}" />
+                           Classes.error="{Binding !IsConfirmed}" FontSize="{DynamicResource FontSizeH6}" Height="42" />
               </StackPanel>
             </DataTemplate>
           </ItemsControl.ItemTemplate>
