Disable ToggleSwitch knobs transitions to fix delay of switch toggle at settings

--- a/WalletWasabi.Fluent/Styles/ToggleSwitch.axaml
+++ b/WalletWasabi.Fluent/Styles/ToggleSwitch.axaml
@@ -3,4 +3,10 @@
   <Style Selector="ToggleSwitch">
     <Setter Property="Cursor" Value="Hand" />
   </Style>
+  <Style Selector="ToggleSwitch:not(:dragging) /template/ Grid#MovingKnobs">
+    <Setter Property="Transitions">
+      <Transitions>
+      </Transitions>
+    </Setter>
+  </Style>
 </Styles>
