--- a/WalletWasabi.Fluent/Controls/PrivacyContentControl.axaml
+++ b/WalletWasabi.Fluent/Controls/PrivacyContentControl.axaml
@@ -23,7 +23,7 @@
                  HorizontalAlignment="Stretch"
                  Background="Transparent">
             <Viewbox Name="PART_Icon">
-              <PathIcon Data="{StaticResource incognito_pathicon}" />
+              <PathIcon Data="{StaticResource nav_incognito_24_regular}" />
             </Viewbox>
             <controls:PrivacyTextPresenter Name="PART_PrivacyText" />
           </Panel>
