--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
@@ -66,7 +66,7 @@
           <PathIcon Data="{StaticResource entities_edit_regular}" Foreground="{DynamicResource SystemAccentColor}" />
         </Viewbox>
       </Button>
-      <c:PreviewItem Icon="{StaticResource incognito_pathicon}"
+      <c:PreviewItem Icon="{StaticResource nav_incognito_24_regular}"
                      Label="other people or companies could know about this">
         <c:LabelsItemsPresenter Items="{Binding Labels}"
                                 HorizontalAlignment="Left"
