--- a/WalletWasabi.Fluent/Styles/ToggleSwitch.axaml
+++ b/WalletWasabi.Fluent/Styles/ToggleSwitch.axaml
@@ -3,6 +3,8 @@
   <Style Selector="ToggleSwitch">
     <Setter Property="Cursor" Value="Hand" />
   </Style>
+
+  <!-- Fix for https://github.com/zkSNACKs/WalletWasabi/issues/9436 -->
   <Style Selector="ToggleSwitch:not(:dragging) /template/ Grid#MovingKnobs">
     <Setter Property="Transitions">
       <Transitions>
