--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
@@ -17,11 +17,11 @@
                                Content="{Binding BalanceBtc^, Converter={x:Static converters:MoneyConverters.ToBtc}}">
         <Interaction.Behaviors>
           <behaviors:CopyContentToClipboardBehavior Content="{Binding BalanceBtc^}" FlyoutContent="Copied!">
-            <behaviors:CopyContentToClipboardBehavior.FlyoutContentTemplate>
+            <!--<behaviors:CopyContentToClipboardBehavior.FlyoutContentTemplate>
               <DataTemplate x:DataType="x:String">
                 <TextBlock Text="{Binding}" TextAlignment="Center" />
               </DataTemplate>
-            </behaviors:CopyContentToClipboardBehavior.FlyoutContentTemplate>
+            </behaviors:CopyContentToClipboardBehavior.FlyoutContentTemplate>-->
           </behaviors:CopyContentToClipboardBehavior>
         </Interaction.Behaviors>
       </c:PrivacyContentControl>
