--- a/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/WalletCoinsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/WalletCoinsView.axaml
@@ -30,7 +30,7 @@
                          Background="Transparent"
                          x:CompileBindings="True" x:DataType="walletcoins:WalletCoinViewModel">
                 <i:Interaction.Behaviors>
-                  <behaviors:ExecuteCommandOnDoubleTapped Command="{Binding ToggleSelectCommand, Mode=OneWay}" />
+                  <behaviors:ExecuteCommandOnDoubleTapped Command="{Binding ToggleExcludeCommand, Mode=OneWay}" />
                 </i:Interaction.Behaviors>
                 <Border Name="PART_SelectionIndicator"
                         BorderThickness="2 0 0 0"
