--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalanceTileView.axaml
@@ -8,16 +8,41 @@
              mc:Ignorable="d" d:DesignWidth="320" d:DesignHeight="140"
              x:CompileBindings="True"
              x:DataType="tiles:WalletBalanceTileViewModel"
-             x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.WalletBalanceTileView">
+             x:Class="WalletWasabi.Fluent.Views.Wallets.Home.Tiles.WalletBalanceTileView" ClipToBounds="False">
+
+  <UserControl.Styles>
+    <Style Selector="c|PreviewItem">
+      <Setter Property="Template">
+        <ControlTemplate>
+          <Panel ClipToBounds="False">
+            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}"
+                              ContentTemplate="{TemplateBinding ContentTemplate}"
+                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                              VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
+            <c:ClipboardCopyButton x:Name="PART_ClipboardCopyButton" 
+                                   ToolTip.Tip="Copy"
+                                   HorizontalAlignment="Right"
+                                   Width="30"
+                                   Margin="0 0 -30 0"
+                                   Text="{TemplateBinding TextValue}"
+                                   IsVisible="{TemplateBinding IsCopyButtonVisible}" />
+          </Panel>
+        </ControlTemplate>
+      </Setter>
+    </Style>
+  </UserControl.Styles>
 
   <c:TileControl Title="BALANCE" IsBottomContentVisible="{Binding HasBalance^}" SeparatorMargin="0 0 0 6">
     <Viewbox Margin="0 3" VerticalAlignment="Center" MaxHeight="40">
-      <c:PrivacyContentControl Classes="h2 monoSpaced" HorizontalContentAlignment="Center"
-                               Content="{Binding BalanceBtc^}" />
+      <c:CopyableItem ContentToCopy="{Binding BalanceBtc^}">
+        <c:PrivacyContentControl Classes="h2 monoSpaced" HorizontalContentAlignment="Center"
+                                 Content="{Binding BalanceBtc^, Converter={x:Static converters:MoneyConverters.ToBtc}}" />
+      </c:CopyableItem>
     </Viewbox>
     <c:TileControl.BottomContent>
       <c:PrivacyContentControl Classes="bold monoSpaced" Margin="4" VerticalAlignment="Center"
-                               HorizontalAlignment="Center" Opacity="0.8"
+                               Opacity="0.8"
+                               HorizontalContentAlignment="Center"
                                Content="{Binding BalanceFiat^, Converter={x:Static converters:MoneyConverters.ToUsdAproxBetweenParens}}" />
     </c:TileControl.BottomContent>
   </c:TileControl>
