Use BindPointerOverBehavior in MusicControlsView

--- a/WalletWasabi.Fluent/Views/Wallets/MusicControlsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/MusicControlsView.axaml
@@ -3,12 +3,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:wallets="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets"
+             xmlns:i="using:Avalonia.Xaml.Interactivity"
+             xmlns:behaviors="clr-namespace:WalletWasabi.Fluent.Behaviors"
              Background="Transparent"
-             IsPointerOver="{Binding IsPointerOver, Mode=OneWayToSource}"
              x:DataType="wallets:WalletViewModel"
              x:CompileBindings="True"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="64"
              x:Class="WalletWasabi.Fluent.Views.Wallets.MusicControlsView">
+  <i:Interaction.Behaviors>
+    <behaviors:BindPointerOverBehavior IsPointerOver="{Binding IsPointerOver}" />
+  </i:Interaction.Behaviors>
   <UserControl.Styles>
     <Style Selector=":is(TextBlock)">
       <Setter Property="VerticalAlignment" Value="Center" />
