--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyControlTileView.axaml
@@ -33,9 +33,11 @@
           <TextBlock
             Text="PRIVATE" Classes="bold" Margin="4 2" VerticalAlignment="Center" HorizontalAlignment="Center" />
         </Border>
-        <c:PrivacyContentControl Classes="bold"
-                                        VerticalAlignment="Center"
-                                        Content="{Binding BalancePrivateBtc}" />
+        <c:CopyableItem ContentToCopy="{Binding BalancePrivateBtc}">
+          <c:PrivacyContentControl Classes="bold"
+                                   VerticalAlignment="Center"
+                                   Content="{Binding BalancePrivateBtc}" />
+        </c:CopyableItem>
       </StackPanel>
     </c:TileControl.BottomContent>
   </c:TileControl>
