fix discreet mode amount column

--- a/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/AmountColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/AmountColumnView.axaml
@@ -12,5 +12,6 @@
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center"
                            Margin="5 0 10 0"
+                           MinWidth="50"
                            UseOpacity="False" />
 </UserControl>
